--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "marked": "^4.0.10",
     "next": "12.0.8",
     "react": "17.0.2",
+    "react-cookie-consent": "^7.2.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
