--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "perameter": {
     "title": "Techfeed",
-    "favicon": "/image/icon.png",
+    "favicon": "/images/favicon.png",
     "pagination": 4,
     "sharePost": true,
     "contactFormAction": "https://airform.io/faruk.themefisher@gmail.com"
