--- a/config/config.json
+++ b/config/config.json
@@ -8,7 +8,7 @@
   },
 
   "footer": {
-    "copyright": "Copyright by your company",
+    "copyright": "Copyright by your [company](statichunt.com)",
     "theme_copyright": true
   },
 
